--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
+
+        <repository>
+            <id>sonatype</id>
+            <url>https://s01.oss.sonatype.org/content/groups/public/</url>
+        </repository>
     </repositories>
 
     <build>
