--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.5.1</version>
                 <configuration>
-                    <minimizeJar>true</minimizeJar>
+                    <minimizeJar>false</minimizeJar>
                     <relocations>
                         <relocation>
                             <pattern>io.github.mooy1.infinitylib</pattern>
@@ -66,6 +66,11 @@
                         <relocation>
                             <pattern>org.bstats</pattern>
                             <shadedPattern>io.github.schntgaispock.bstats</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>com.tcoded.folialib</pattern>
+                            <!-- !! 请确保将这里改为你插件的组名或插件名 !! -->
+                            <shadedPattern>io.github.schntgaispock.folialib</shadedPattern>
                         </relocation>
                     </relocations>
                     <filters>
@@ -161,6 +166,19 @@
             <artifactId>GuizhanLibPlugin</artifactId>
             <version>2.3.0</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.technicallycoded</groupId>
+            <artifactId>FoliaLib</artifactId>
+            <version>0.4.4</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <version>17.0.0</version>
+            <artifactId>annotations</artifactId>
         </dependency>
     </dependencies>
 </project>
