--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
             <id>sonatype</id>
             <url>https://s01.oss.sonatype.org/content/groups/public/</url>
         </repository>
+
+        <repository>
+            <id>tcoded-releases</id>
+            <url>https://repo.tcoded.com/releases</url>
+        </repository>
     </repositories>
 
     <build>
@@ -169,9 +174,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.technicallycoded</groupId>
+            <groupId>com.tcoded</groupId>
             <artifactId>FoliaLib</artifactId>
-            <version>0.4.4</version>
+            <version>0.5.1</version>
             <scope>compile</scope>
         </dependency>
 
