--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -17,10 +17,13 @@ proficiency-threshold: 256
 drops:
   # 相应方块掉落美食家(Gastronomicon)种子的几率 (0-1)
   block-break-chances:
-    grass: 0.1
-    tall-grass: 0.15
-    fern: 0.1
-    large-fern: 0.15
+    short-grass: 0.05 
+    # 1.20.3及以上的服务器改这个修改草的掉率
+    grass: 0.05
+    # 1.20.3以下的服务器改这个修改草的掉率
+    tall-grass: 0.1
+    fern: 0.05
+    large-fern: 0.1
     podzol: 0.03
     dirt: 0.01
     grass-block: 0.04
